# KaizenA

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  TextureManager.h  core.h  main.cpp
include/: Game.h  GameObject.h  TextureManager.h
src/: Game.cpp  GameObject.cpp  TextureManager.cpp  main.cpp
